thursday morning commit

--- a/guts.html
+++ b/guts.html
@@ -14,15 +14,15 @@
             <a class="black-text brand-logo center">♣️♥️  GUTS ONLINE  ♦️♠︎</a>
             <!-- Modal Trigger -->
             <button class="btn red left" href="#" data-target="modal1">Rules</button>
-            <button class="black btn right" id="start-btn">Start Game</button>
+            <button class="black btn right" id="start-btn">New Game</button>
         </div>
     </nav>
     <div class="row">
         <br>
-        <div class="col s7 offset-s5" id="player3">
-            <img id="player3-im1" src="cardImage/Green.png" width="113" height="157" alt="card">
-            <img id="player3-im2" src="cardImage/Green.png" width="113" height="157" alt="card">
-            <p class="black-text" id="player3Chips"></p>
+        <div class="col s7 offset-s5" id="pot">
+            <img id="pot-im1" src="cardImage/Green.png" width="113" height="157" alt="card">
+            <img id="pot-im2" src="cardImage/Green.png" width="113" height="157" alt="card">
+            <p class="black-text" id="potChips"></p>
         </div>
     </div>
     <div class="row">
@@ -31,10 +31,10 @@
           <img id="player1-im2" src="cardImage/Green.png" width="113" height="157" alt="card">
           <p class="black-text" id="player1Chips"></p>
         </div>
-        <div class="col s3 offset-s1" id="pot">
-          <img id="pot-im1" src="cardImage/Green.png" width="113" height="157" alt="card">
-          <img id="pot-im2" src="cardImage/Green.png" width="113" height="157" alt="card">
-          <p class="black-text" id="potChips"></p>
+        <div class="col s3 offset-s1" id="player3">
+          <img id="player3-im1" src="cardImage/Green.png" width="113" height="157" alt="card">
+          <img id="player3-im2" src="cardImage/Green.png" width="113" height="157" alt="card">
+          <p class="black-text" id="player3Chips"></p>
         </div>
         <div class="col s3 offset-s1" id="player2">
             <img id="player2-im1" src="cardImage/Green.png" width="113" height="157" alt="card">
