thursday midday commit

--- a/guts.html
+++ b/guts.html
@@ -50,7 +50,7 @@
                 <br>
                 <li>Each player is dealt two cards</li>
                 <br>
-                <li>After all players have decided, the players that are in will reveal their cards</li>
+                <li>After all players have decided to stay or fold, the players that are in will reveal their cards</li>
                 <br>
                 <li>If no player is in, all players must ante again</li>
                 <br>
