--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </ul>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close btn-flat">Agree</a>
+            <a class="modal-action modal-close btn-flat">Agree</a>
         </div>
     </div>
     <script type="text/javascript" src="gutsScript.js"></script>
