updated the rules

--- a/index.html
+++ b/index.html
@@ -50,27 +50,23 @@
         <div class="modal-content">
             <h4>Rules of Guts</h4>
             <ul>
-                <li>The purpose of the game is to win as many chips as possible</li>
+                <li>Each round begins with each player anteing ten chips</li>
                 <br>
-                <li>All players begin by anteing ten chips into the pot</li>
-                <br>
-                <li>All players and the pot recieve two cards each</li>
-                <br>
-                <li>Each player then looks at their cards and chooses to stay in the round or to fold</li>
-                <br>
-                <li>The hands are ranked high to low like so: pairs, suits of pairs, highcard, secondcard, suite of highcard</li>
+                <li>Players are dealed ten cards each and then decide to stay or hold</li>
                 <br>
                 <li>Players that stay reveal their cards and the higest two card poker hand wins</li>
                 <br>
-                <li>If no player is in, all players must ante again</li>
+                <li>Pairs beat high card and suit order is used to break ties</li>
                 <br>
-                <li>If one player is in, that player must play the pot. If they lose they must match the pot</li>
+                <li>If no player holds, all players must re ante</li>
                 <br>
-                <li>If multiple players are in, the winner takes the pot and the losing players must match the pot</li>
+                <li>If only one player holds, the pot becomes the second player</li>
+                <br>
+                <li>Winner receives chips equal to the amount in the pot from each loser</li>
+                <br>
+                <li>If the pot is beaten, you can choose to re-ante and start new round</li>
                 <br>
                 <li>If, after a round, you run out of chips, YOU LOSE!</li>
-                <br>
-                <li>If the pot is beaten, you can choose to start a new round</li>
                 <br>
                 <li>DONT BE CHICKEN</li>
             </ul>
